--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,8 @@ phases:
       nodejs: 10
 
     commands:
-      # No commands yet
+      - npm install
+      - npm run build
 
 artifacts:
   files:
@@ -14,3 +15,4 @@ artifacts:
     - index.html
     - images/*
     - styles/*
+    - dist/bundle.js
