--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My portfolio.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch"
   },
